fixed loot bg too small for long item names

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -4171,8 +4171,9 @@ table.astralForgeShards td {
     position: absolute;
     top: 0;
     left: 0;
+    bottom: 0;
+    right: 0;
     width: 100%;
-    height: 31px;
     animation-name: lootRevealAnim;
     animation-duration: 1s;
     animation-delay: 0s;
